--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -83,11 +83,11 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/sundialproject2.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/sundialproject1.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">The Even Bigger Questions...</h2>
 										<p>What does a more diverse, equitable, inclusive, and accessible STEM community look like, and how do we make it a reality? How can we teach physics in a way that excites students rather than deters them? How can we open the doors of astrophysics to students in areas without considerable resources?</p>
-										<p>The Access Network connects university programs across the country dedicated to answering these questions: https://accessnetwork.org/</p>
+										<!--<p>The Access Network connects university programs across the country dedicated to answering these questions: https://accessnetwork.org/</p>-->
 									</div>
 								</div>
 							</section>
