updated images and some text

--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -44,7 +44,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-moon"></span></div>
 							<h2>Isabela G. Huckabee</h2>
-						  <p>"I'll say it. something has to be done about the problems."</a></p>
+						  <p></a></p>
 						</div>
 					</section>
 
@@ -83,7 +83,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/sundialproject1.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/access.heif" alt="" /></a>
 									<div class="content">
 										<h2 class="major">The Even Bigger Questions...</h2>
 										<p>What does a more diverse, equitable, inclusive, and accessible STEM community look like, and how do we make it a reality? How can we teach physics in a way that excites students rather than deters them? How can we open the doors of astrophysics to students in areas without considerable resources?</p>
