--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-moon"></span></div>
+							<div class="logo"><span class="icon fa-star"></span></div>
 							<h2>Isabela G. Huckabee</h2>
-						  <p>"I'll say it. something has to be done about the problems."</a></p>
+						  <p>Dwarf Stars, Giant Planets, and everything in between</a></p>
 						</div>
 					</section>
 
@@ -58,7 +58,8 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>I am an undergraduate astrophysics major at Arizona State University in the School of Earth and Space Exploration currently working with Aishwarya Iyer and Dr. Michael Line.</p>
-										<p>In 2020, I began working on Project SKY-SURF with Dr. Rogier Windhorst. In the summer of 2020, I had the wonderful opportunity of working remotely with Dr. Hong Zhao at UC Boulder on radiation belt electrons. In the fall, I was awarded a NASA Space Grant scholarship to work on low-gravity M-dwarfs. I was subsequently awarded the Barry Goldwater Fellowship for this work in 2021. That year I also received the DAAD-RISE fellowship to carry out astronomy-related machine learning work at the LSW in Heidelberg, Germany. I will be working at the NASA Jet Propulsion Laboratory on the Exoplanet Watch project in the summer of 2022, and will be completing my undergraduate thesis in the coming academic year.</p>
+										<p>In 2020, I began working on Project SKY-SURF with Dr. Rogier Windhorst. In the summer of 2020, I had the wonderful opportunity of working remotely with Dr. Hong Zhao at UC Boulder on radiation belt electrons. In the fall, I was awarded a NASA Space Grant scholarship to work on low-gravity M-dwarfs. I was subsequently awarded the Barry Goldwater Fellowship for this work in 2021. That year I also received the DAAD-RISE fellowship to carry out astronomy-related machine learning work at the LSW in Heidelberg, Germany. I am currently at the NASA Jet Propulsion Laboratory on the Exoplanet Watch project, and will be completing my undergraduate thesis in the coming academic year.</p>
+										<p>You can find publications and selected presentations in my CV under the Menu option.</p>
 									</div>
 								</div>
 							</section>
@@ -83,7 +84,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/sundialproject2.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/access.JPG" alt="" /></a>
 									<div class="content">
 										<h2 class="major">The Even Bigger Questions...</h2>
 										<p>What does a more diverse, equitable, inclusive, and accessible STEM community look like, and how do we make it a reality? How can we teach physics in a way that excites students rather than deters them? How can we open the doors of astrophysics to students in areas without considerable resources?</p>
