--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="HuckabeeCV_05222022.pdf">CV</a></li>
+								<li><a href="HuckabeeCV_Dec22.pdf">CV</a></li>
 							<!--	<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li> -->
@@ -58,7 +58,7 @@
 									<div class="content">
 										<h2 class="major">About Me</h2>
 										<p>I am an undergraduate astrophysics major at Arizona State University in the School of Earth and Space Exploration currently working with Aishwarya Iyer and Dr. Michael Line.</p>
-										<p>In 2020, I began working on Project SKY-SURF with Dr. Rogier Windhorst. In the summer of 2020, I had the wonderful opportunity of working remotely with Dr. Hong Zhao at UC Boulder on radiation belt electrons. In the fall, I was awarded a NASA Space Grant scholarship to work on low-gravity M-dwarfs. I was subsequently awarded the Barry Goldwater Fellowship for this work in 2021. That year I also received the DAAD-RISE fellowship to carry out astronomy-related machine learning work at the LSW in Heidelberg, Germany. I am currently at the NASA Jet Propulsion Laboratory on the Exoplanet Watch project, and will be completing my undergraduate thesis in the coming academic year.</p>
+										<p>In 2020, I began working on Project SKY-SURF with Dr. Rogier Windhorst. In the summer of 2020, I had the wonderful opportunity of working remotely with Dr. Hong Zhao at UC Boulder on radiation belt electrons. In the fall, I was awarded a NASA Space Grant scholarship to work on low-gravity M-dwarfs. I was subsequently awarded the Barry Goldwater Fellowship for this work in 2021. That year I also received the DAAD-RISE fellowship to carry out astronomy-related machine learning work at the LSW in Heidelberg, Germany. I am currently at the NASA Jet Propulsion Laboratory on the Exoplanet Watch project. Within the next couple months I will be completing my undergraduate thesis on modeling cloud-free T-dwarfs in disequilibrium with gaussian processes and analyzing transit timing variations within the Exoplanet Watch  Priority Target List.</p>
 										<p>You can find publications and selected presentations in my CV under the Menu option.</p>
 									</div>
 								</div>
@@ -72,7 +72,8 @@
 										<h2 class="major">The Big Questions...</h2>
 										<p>Frankly, the vastness of space terrifies me. But, it still leaves me wondering. Like a horror movie character who decides to check out the source of evil noises by venturing into the dark basement. Below are the questions I'd like to answer by going into the dark basement.</p>
 										<p>How can we expect to characterize exoplanets accurately if we cannot even characterize their host stars correctly?</p>
-										<p>Brown dwarfs. What’s their deal? How can we use the data we have on brown dwarfs to model and characterize large exoplanets too?</p>
+										<p>Brown dwarfs. What’s their deal?</p>
+										<p>How can we most efficiently model all the complexities in substellar atmospheres?</p>
 										<p>If neptune-sized planets are so common, why haven’t we fully explored our own neptune-sized planets yet?</p>
 									<!--	<p>Why are the moons in our solar system so diverse?</p> -->
 										<p>What’s the best way to process the sheer amount of astronomical data we have? How can we use machine learning processes to the fullest in astronomy?</p>
@@ -97,7 +98,7 @@
 									<a href="#" class="image"><img src="images/headshot1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">What I'm About</h2>
-										<p>fishing. sitting in the sun. cutting vegetables. making silly little posts. sitting in the snow. having a laugh. graphic design. thinking (deeply and shallowly). looking at giant kelp. bluegrass. eating costco chicken bakes.</p.>
+										<p>fishing. sitting in the sun. cutting vegetables. making silly little posts. laying in the snow. having a laugh. freelance graphic design. thinking (deeply and shallowly). looking at giant kelp. bluegrass. enjoying costco chicken bakes.</p.>
 									</div>
 								</div>
 							</section>
