updated for may23

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="HuckabeeCV_Dec22.pdf">CV</a></li>
+								<li><a href="HuckabeeCV_May23.pdf">CV</a></li>
 							<!--	<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li> -->
@@ -54,11 +54,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/tractor2.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/Shoot-2.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>I am an undergraduate astrophysics major at Arizona State University in the School of Earth and Space Exploration currently working with Aishwarya Iyer and Dr. Michael Line.</p>
-										<p>In 2020, I began working on Project SKY-SURF with Dr. Rogier Windhorst. In the summer of 2020, I had the wonderful opportunity of working remotely with Dr. Hong Zhao at UC Boulder on radiation belt electrons. In the fall, I was awarded a NASA Space Grant scholarship to work on low-gravity M-dwarfs. I was subsequently awarded the Barry Goldwater Fellowship for this work in 2021. That year I also received the DAAD-RISE fellowship to carry out astronomy-related machine learning work at the LSW in Heidelberg, Germany. I am currently at the NASA Jet Propulsion Laboratory on the Exoplanet Watch project. Within the next couple months I will be completing my undergraduate thesis on modeling cloud-free T-dwarfs in disequilibrium with gaussian processes and analyzing transit timing variations within the Exoplanet Watch  Priority Target List.</p>
+										<p>I am currently at the NASA Jet Propulsion Laboratory working on the Exoplanet Watch project analyzing transit timing variations within our database of citizen scientist and professional astronomer transit observations. Starting in the fall of 2023 I will be taking a gap year to do astronomy education research hosted by Ateneo de Manila University in the Philippines. This work will involve creating astrophysics courses and education tools, as well as organizing talk series and events for Filipino students. I will begin at Cornell University in the fall of 2024 to pursue a Ph.D. in Astronomy and Space Sciences and continue studying the atmospheres of substellar objects.</p>
+										<p>I hold a BS in Astrophysics, minor in Physics, and certificate in Cross-Sector Leadership from Arizona State University.</p>
 										<p>You can find publications and selected presentations in my CV under the Menu option.</p>
 									</div>
 								</div>
@@ -67,17 +67,15 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/kelp.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/jplslay.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">The Big Questions...</h2>
-										<p>Frankly, the vastness of space terrifies me. But, it still leaves me wondering. Like a horror movie character who decides to check out the source of evil noises by venturing into the dark basement. Below are the questions I'd like to answer by going into the dark basement.</p>
-										<p>How can we expect to characterize exoplanets accurately if we cannot even characterize their host stars correctly?</p>
-										<p>Brown dwarfs. What’s their deal?</p>
-										<p>How can we most efficiently model all the complexities in substellar atmospheres?</p>
-										<p>If neptune-sized planets are so common, why haven’t we fully explored our own neptune-sized planets yet?</p>
-									<!--	<p>Why are the moons in our solar system so diverse?</p> -->
-										<p>What’s the best way to process the sheer amount of astronomical data we have? How can we use machine learning processes to the fullest in astronomy?</p>
-										<p>(Note: This list is not exhaustive and always under construction)</p>
+<p>Frankly, the vastness of space terrifies me. But, it still leaves me wondering. Like a horror movie character who decides to check out the source of evil noises by venturing into the dark basement. Below are the questions I'd like to answer by going into the dark basement.</p>
+<p>How do we fully consider the stellar environment in which planets exist, and not shy away from the complexity and interdisciplinary nature of the answer? </p>
+<p>How can we squeeze as much science as possible out of our datasets? How can we use machine learning processes to the fullest in astronomy?</p>
+<p>Brown dwarfs. What’s their deal?</p>
+<p>How can we most efficiently model all the complexities in substellar atmospheres?</p>
+<p>(Note: This list is not exhaustive and always under construction)</p>
 									</div>
 								</div>
 							</section>
@@ -89,16 +87,17 @@
 									<div class="content">
 										<h2 class="major">The Even Bigger Questions...</h2>
 										<p>What does a more diverse, equitable, inclusive, and accessible STEM community look like, and how do we make it a reality? How can we teach physics in a way that excites students rather than deters them? How can we open the doors of astrophysics to students in areas without considerable resources?</p>
-										<p>The Access Network connects university programs across the country dedicated to answering these questions: https://accessnetwork.org/</p>
+										<p>Why should developing nations care about space when there are many more immediate problems to address?</p>
+										<p>In what systems does astrophysics research and space exploration occur? How do we best work together to change those systems for the better?</p>
 									</div>
 								</div>
 							</section>
 							<section id="four" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/headshot1.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/tractor2.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">What I'm About</h2>
-										<p>fishing. sitting in the sun. cutting vegetables. making silly little posts. laying in the snow. having a laugh. freelance graphic design. thinking (deeply and shallowly). looking at giant kelp. bluegrass. enjoying costco chicken bakes.</p.>
+										<p>fishing. sitting in the sun. cutting vegetables. making silly little posts. laying in the snow. having a laugh. freelance graphic design. thinking (deeply and shallowly). admiring the beauty of giant kelp. bluegrass. enjoying costco chicken bakes.</p.>
 									</div>
 								</div>
 							</section>
