--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>I.G. HUCKABEE</title>
+		<title>I.G. HUCKABEEE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
